Use hash-backed package caches for ClasspathJar #4933
Keep cached jar package names in a hash-backed unmodifiable set so
repeated package contains() checks avoid ImmutableCollections.SetN probe
costs.

Fixes https://github.com/eclipse-jdt/eclipse.jdt.core/issues/4933